istio-manifests/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: byoc-virtualservice
  namespace: demo
spec:
  hosts:
  - "*"
  gateways:
  - byoc-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: echo-service.demo.svc.cluster.local
        port:
          number: 80
